// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button match snapshot PrimaryButton 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-vuh189-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Hello world
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button match snapshot PrimaryButtonDisabledTrue 1`] = `
<div>
  <button
    class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-vuh189-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    Hello world
  </button>
</div>
`;

exports[`Button match snapshot SecondaryButton 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1j1g7hz-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Hello world
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button match snapshot SecondaryButtonDisabledTrue 1`] = `
<div>
  <button
    class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1j1g7hz-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    Hello world
  </button>
</div>
`;

exports[`Button match snapshot TertiaryButton 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-ka5gyo-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Hello world
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button match snapshot TertiaryButtonDisabledTrue 1`] = `
<div>
  <button
    class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-ka5gyo-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    Hello world
  </button>
</div>
`;
